--- a/index.html
+++ b/index.html
@@ -14,106 +14,106 @@
 
   <h2>宏观视角下的浏览器</h2>
   <ul>
-    <li><a href="/02/01.html">Chrome架构：仅仅打开了1个页面，为什么有4个进程？</a></li>
-    <li><a href="/02/02.html">TCP协议：如何保证页面文件能被完整送达浏览器？</a></li>
-    <li><a href="/02/03.html">HTTP请求流程：为什么很多站点第二次打开速度会很快？</a></li>
-    <li><a href="/02/04.html">导航流程：从输入URL到页面展示，这中间发生了什么？</a></li>
-    <li><a href="/02/05.html">渲染流程（上）：HTML、CSS和JavaScript，是如何变成页面的？</a></li>
-    <li><a href="/02/06.html">渲染流程（下）：HTML、CSS和JavaScript，是如何变成页面的?</a></li>
+    <li><a href="./02/01.html">Chrome架构：仅仅打开了1个页面，为什么有4个进程？</a></li>
+    <li><a href="./02/02.html">TCP协议：如何保证页面文件能被完整送达浏览器？</a></li>
+    <li><a href="./02/03.html">HTTP请求流程：为什么很多站点第二次打开速度会很快？</a></li>
+    <li><a href="./02/04.html">导航流程：从输入URL到页面展示，这中间发生了什么？</a></li>
+    <li><a href="./02/05.html">渲染流程（上）：HTML、CSS和JavaScript，是如何变成页面的？</a></li>
+    <li><a href="./02/06.html">渲染流程（下）：HTML、CSS和JavaScript，是如何变成页面的?</a></li>
   </ul> 
   <h2>浏览器中JavaScript执行机制</h2>
   <ul>
-    <li><a href="/03/07.html">变量提升：JavaScript代码是按顺序执行的吗？</a></li>
-    <li><a href="/03/08.html">调用栈：为什么JavaScript代码会出现栈溢出？</a></li>
-    <li><a href="/03/09.html">块级作用域：var缺陷以及为什么要引入let和const？</a></li>
-    <li><a href="/03/10.html">作用域链和闭包：代码中出现相同的变量，JavaScript引擎是如何选择的？</a></li>
-    <li><a href="/03/11.html">this：从JavaScript执行上下文的视角讲清楚this</a></li>
+    <li><a href="./03/07.html">变量提升：JavaScript代码是按顺序执行的吗？</a></li>
+    <li><a href="./03/08.html">调用栈：为什么JavaScript代码会出现栈溢出？</a></li>
+    <li><a href="./03/09.html">块级作用域：var缺陷以及为什么要引入let和const？</a></li>
+    <li><a href="./03/10.html">作用域链和闭包：代码中出现相同的变量，JavaScript引擎是如何选择的？</a></li>
+    <li><a href="./03/11.html">this：从JavaScript执行上下文的视角讲清楚this</a></li>
   </ul>
   <h2>V8工作原理</h2>
   <ul>
-    <li><a href="/04/12.html">栈空间和堆空间：数据是如何存储的？</a></li>
-    <li><a href="/04/13.html">垃圾回收：垃圾数据是如何自动回收的？</a></li>
-    <li><a href="/04/14.html">编译器和解释器：V8是如何执行一段JavaScript代码的？</a></li>
+    <li><a href="./04/12.html">栈空间和堆空间：数据是如何存储的？</a></li>
+    <li><a href="./04/13.html">垃圾回收：垃圾数据是如何自动回收的？</a></li>
+    <li><a href="./04/14.html">编译器和解释器：V8是如何执行一段JavaScript代码的？</a></li>
   </ul>
   <h2>浏览器中的页面循环系统</h2>
   <ul>
-    <li><a href="/05/15.html">消息队列和事件循环：页面是怎么“活”起来的？</a></li>
-    <li><a href="/05/16.html">WebAPI：setTimeout是如何实现的？</a></li>
-    <li><a href="/05/17.html">WebAPI：XMLHttpRequest是怎么实现的？</a></li>
-    <li><a href="/05/18.html">宏任务和微任务：不是所有任务都是一个待遇</a></li>
-    <li><a href="/05/19.html">Promise：使用Promise，告别回调函数</a></li>
-    <li><a href="/05/20.html">async-await：使用同步的方式去写异步代码</a></li>
+    <li><a href="./05/15.html">消息队列和事件循环：页面是怎么“活”起来的？</a></li>
+    <li><a href="./05/16.html">WebAPI：setTimeout是如何实现的？</a></li>
+    <li><a href="./05/17.html">WebAPI：XMLHttpRequest是怎么实现的？</a></li>
+    <li><a href="./05/18.html">宏任务和微任务：不是所有任务都是一个待遇</a></li>
+    <li><a href="./05/19.html">Promise：使用Promise，告别回调函数</a></li>
+    <li><a href="./05/20.html">async-await：使用同步的方式去写异步代码</a></li>
   </ul>
   <h2>浏览器中的页面</h2>
   <ul>
-    <li><a href="/06/21.html">Chrome开发者工具：利用网络面板做性能分析</a></li>
-    <li><a href="/06/22.html">DOM树：JavaScript是如何影响DOM树构建的？</a></li>
-    <li><a href="/06/23.html">渲染流水线：CSS如何影响首次加载时的白屏时间？</a></li>
-    <li><a href="/06/24.html">分层和合成机制：为什么CSS动画比JavaScript高效？</a></li>
-    <li><a href="/06/25.html">页面性能：如何系统地优化页面？</a></li>
-    <li><a href="/06/26.html">虚拟DOM：虚拟DOM和实际的DOM有何不同？-await：使用同步的方式去写异步代码</a></li>
-    <li><a href="/06/27.html">渐进式网页应用（PWA）：它究竟解决了Web应用的哪些问题？</a></li>
-    <li><a href="/06/28.html">WebComponent：像搭积木一样构建Web应用</a></li>
+    <li><a href="./06/21.html">Chrome开发者工具：利用网络面板做性能分析</a></li>
+    <li><a href="./06/22.html">DOM树：JavaScript是如何影响DOM树构建的？</a></li>
+    <li><a href="./06/23.html">渲染流水线：CSS如何影响首次加载时的白屏时间？</a></li>
+    <li><a href="./06/24.html">分层和合成机制：为什么CSS动画比JavaScript高效？</a></li>
+    <li><a href="./06/25.html">页面性能：如何系统地优化页面？</a></li>
+    <li><a href="./06/26.html">虚拟DOM：虚拟DOM和实际的DOM有何不同？-await：使用同步的方式去写异步代码</a></li>
+    <li><a href="./06/27.html">渐进式网页应用（PWA）：它究竟解决了Web应用的哪些问题？</a></li>
+    <li><a href="./06/28.html">WebComponent：像搭积木一样构建Web应用</a></li>
   </ul>
   <h2>浏览器中的网络</h2>
   <ul>
-    <li><a href="/07/29.html">HTTP-1：HTTP性能优化</a></li>
-    <li><a href="/07/30.html">HTTP-2：如何提升网络速度？</a></li>
-    <li><a href="/07/31.html">HTTP-3：甩掉TCP、TLS的包袱，构建高效网络</a></li>
+    <li><a href="./07/29.html">HTTP-1：HTTP性能优化</a></li>
+    <li><a href="./07/30.html">HTTP-2：如何提升网络速度？</a></li>
+    <li><a href="./07/31.html">HTTP-3：甩掉TCP、TLS的包袱，构建高效网络</a></li>
   </ul>
   <h2>浏览器安全</h2>
   <ul>
-    <li><a href="/08/32.html">同源策略：为什么XMLHttpRequest不能跨域请求资源？</a></li>
-    <li><a href="/08/33.html">跨站脚本攻击（XSS）：为什么Cookie中有HttpOnly属性？</a></li>
-    <li><a href="/08/34.html">CSRF攻击：陌生链接不要随便点</a></li>
-    <li><a href="/08/35.html">安全沙箱：页面和系统之间的隔离墙</a></li>
-    <li><a href="/08/36.html">HTTPS：让数据传输更安全</a></li>
+    <li><a href="./08/32.html">同源策略：为什么XMLHttpRequest不能跨域请求资源？</a></li>
+    <li><a href="./08/33.html">跨站脚本攻击（XSS）：为什么Cookie中有HttpOnly属性？</a></li>
+    <li><a href="./08/34.html">CSRF攻击：陌生链接不要随便点</a></li>
+    <li><a href="./08/35.html">安全沙箱：页面和系统之间的隔离墙</a></li>
+    <li><a href="./08/36.html">HTTPS：让数据传输更安全</a></li>
   </ul>
-  <a href="/09/00.html">结束语丨大道至简</a>
+  <a href="./09/00.html">结束语丨大道至简</a>
   <h2>加餐</h2>
   <ul>
-    <li><a href="/10/01.html">浏览上下文组：如何计算Chrome中渲染进程的个数？</a></li>
-    <li><a href="/10/02.html">任务调度：有了setTimeOut，为什么还要使用rAF？</a></li>
-    <li><a href="/10/03.html">加载阶段性能：使用Audits来优化Web性能</a></li>
+    <li><a href="./10/01.html">浏览上下文组：如何计算Chrome中渲染进程的个数？</a></li>
+    <li><a href="./10/02.html">任务调度：有了setTimeOut，为什么还要使用rAF？</a></li>
+    <li><a href="./10/03.html">加载阶段性能：使用Audits来优化Web性能</a></li>
   </ul>
   <hr>
   <h1>V8工作原理</h1>
-  <a href="/11/00.html">开篇词丨如何学习谷歌高性能JavaScript引擎V8？</a>
+  <a href="./11/00.html">开篇词丨如何学习谷歌高性能JavaScript引擎V8？</a>
   <h2>宏观视角</h2>
   <ul>
-    <li><a href="/11/01.html">V8是如何执行一段JavaScript代码的？</a></li>
+    <li><a href="./11/01.html">V8是如何执行一段JavaScript代码的？</a></li>
   </ul>
   <h2>JavaScript设计思想</h2>
   <ul>
-    <li><a href="/12/02.html">函数即对象：一篇文章彻底搞懂JavaScript的函数特点</a></li>
-    <li><a href="/12/03.html">快属性和慢属性：V8采用了哪些策略提升了对象属性的访问速度？</a></li>
-    <li><a href="/12/04.html">函数表达式：涉及大量概念，函数表达式到底该怎么学？</a></li>
-    <li><a href="/12/05.html">原型链V8是如何实现对象继承的？</a></li>
-    <li><a href="/12/06.html">作用域链：V8是如何查找变量的？</a></li>
-    <li><a href="/12/07.html">类型转换：V8是怎么实现1+“2”的？</a></li>
-    <li><a href="/12/08.html">答疑：如何构建和使用V8的调试工具d8？</a></li>
+    <li><a href="./12/02.html">函数即对象：一篇文章彻底搞懂JavaScript的函数特点</a></li>
+    <li><a href="./12/03.html">快属性和慢属性：V8采用了哪些策略提升了对象属性的访问速度？</a></li>
+    <li><a href="./12/04.html">函数表达式：涉及大量概念，函数表达式到底该怎么学？</a></li>
+    <li><a href="./12/05.html">原型链V8是如何实现对象继承的？</a></li>
+    <li><a href="./12/06.html">作用域链：V8是如何查找变量的？</a></li>
+    <li><a href="./12/07.html">类型转换：V8是怎么实现1+“2”的？</a></li>
+    <li><a href="./12/08.html">答疑：如何构建和使用V8的调试工具d8？</a></li>
   </ul>
   <h2>V8编译流水线</h2>
   <ul>
-    <li><a href="/13/09.html">运行时环境：运行JavaScript代码的基石</a></li>
-    <li><a href="/13/10.html">机器代码：二进制机器码究竟是如何被CPU执行的？</a></li>
-    <li><a href="/13/11.html">堆和栈：函数调用是如何影响到内存布局的？</a></li>
-    <li><a href="/13/12.html">延迟解析：V8是如何实现闭包的？</a></li>
-    <li><a href="/13/13.html">字节码（一）：V8为什么又重新引入字节码？</a></li>
-    <li><a href="/13/14.html">字节码（二）：解释器是如何解释执行字节码的？</a></li>
-    <li><a href="/13/15.html">隐藏类：如何在内存中快速查找对象属性？</a></li>
-    <li><a href="/13/16.html">答疑：V8是怎么通过内联缓存来提升函数执行效率的？</a></li>
+    <li><a href="./13/09.html">运行时环境：运行JavaScript代码的基石</a></li>
+    <li><a href="./13/10.html">机器代码：二进制机器码究竟是如何被CPU执行的？</a></li>
+    <li><a href="./13/11.html">堆和栈：函数调用是如何影响到内存布局的？</a></li>
+    <li><a href="./13/12.html">延迟解析：V8是如何实现闭包的？</a></li>
+    <li><a href="./13/13.html">字节码（一）：V8为什么又重新引入字节码？</a></li>
+    <li><a href="./13/14.html">字节码（二）：解释器是如何解释执行字节码的？</a></li>
+    <li><a href="./13/15.html">隐藏类：如何在内存中快速查找对象属性？</a></li>
+    <li><a href="./13/16.html">答疑：V8是怎么通过内联缓存来提升函数执行效率的？</a></li>
   </ul>
   <h2>事件循环和垃圾回收</h2>
   <ul>
-    <li><a href="/14/17.html">消息队列：V8是怎么实现回调函数的？</a></li>
-    <li><a href="/14/18.html">异步编程（一）：V8是如何实现微任务的？</a></li>
-    <li><a href="/14/19.html">异步编程（二）：V8是如何实现async-await的？</a></li>
-    <li><a href="/14/20.html">垃圾回收（一）：V8的两个垃圾回收器是如何工作的？</a></li>
-    <li><a href="/14/21.html">垃圾回收（二）：V8是如何优化垃圾回收器执行效率的？</a></li>
-    <li><a href="/14/22.html">答疑：几种常见内存问题的解决策略</a></li>
+    <li><a href="./14/17.html">消息队列：V8是怎么实现回调函数的？</a></li>
+    <li><a href="./14/18.html">异步编程（一）：V8是如何实现微任务的？</a></li>
+    <li><a href="./14/19.html">异步编程（二）：V8是如何实现async-await的？</a></li>
+    <li><a href="./14/20.html">垃圾回收（一）：V8的两个垃圾回收器是如何工作的？</a></li>
+    <li><a href="./14/21.html">垃圾回收（二）：V8是如何优化垃圾回收器执行效率的？</a></li>
+    <li><a href="./14/22.html">答疑：几种常见内存问题的解决策略</a></li>
   </ul>
-  <a href="/15/00.html">结束语丨我的前端学习踩坑史</a>
+  <a href="./15/00.html">结束语丨我的前端学习踩坑史</a>
 </body>
 
 </html>
