--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>浏览器原理 & V8 原理</title>
+  <style>
+    .start {
+      font-size: larger;
+    }
+    h1 {
+      color: red;
+    }
+    h2 {
+      color: blueviolet;
+    }
+    a{
+      text-decoration: none;
+      color: black;
+    }
+  </style>
 </head>
 
 <body>
   <h1>浏览器工作原理与实践</h1>
-  <a href="./01/00.html" target="_blank">开篇词丨参透了浏览器的工作原理，你就能解决80%的前端难题</a>
+  <a class="start" href="./01/00.html" target="_blank">开篇词丨参透了浏览器的工作原理，你就能解决80%的前端难题</a>
 
   <h2>宏观视角下的浏览器</h2>
   <ul>
@@ -69,7 +84,7 @@
     <li><a href="./08/35.html" target="_blank">安全沙箱：页面和系统之间的隔离墙</a></li>
     <li><a href="./08/36.html" target="_blank">HTTPS：让数据传输更安全</a></li>
   </ul>
-  <a href="./09/00.html" target="_blank">结束语丨大道至简</a>
+  <a class="start" href="./09/00.html" target="_blank">结束语丨大道至简</a>
   <h2>加餐</h2>
   <ul>
     <li><a href="./10/01.html" target="_blank">浏览上下文组：如何计算Chrome中渲染进程的个数？</a></li>
@@ -78,7 +93,7 @@
   </ul>
   <hr>
   <h1>V8工作原理</h1>
-  <a href="./11/00.html" target="_blank">开篇词丨如何学习谷歌高性能JavaScript引擎V8？</a>
+  <a class="start" href="./11/00.html" target="_blank">开篇词丨如何学习谷歌高性能JavaScript引擎V8？</a>
   <h2>宏观视角</h2>
   <ul>
     <li><a href="./11/01.html" target="_blank">V8是如何执行一段JavaScript代码的？</a></li>
@@ -113,7 +128,7 @@
     <li><a href="./14/21.html" target="_blank">垃圾回收（二）：V8是如何优化垃圾回收器执行效率的？</a></li>
     <li><a href="./14/22.html" target="_blank">答疑：几种常见内存问题的解决策略</a></li>
   </ul>
-  <a href="./15/00.html" target="_blank">结束语丨我的前端学习踩坑史</a>
+  <a class="start" href="./15/00.html" target="_blank">结束语丨我的前端学习踩坑史</a>
 </body>
 
 </html>
